--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,97 +4,101 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="page__body">
   <!--Шапка-->
-  <header class="main-header">
-    <a class="main-header__logo">
+  <header class="header">
+    <a class="header__logo">
       <img src="/img/logo_sedona.svg" width="185" height="96" alt="Логотип Седоны">
     </a>
-    <nav class="main-nav">
-      <button class="main-nav__toggle" type="button">
+    <navigation class="nav">
+      <button class="nav__toggle" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
-      <ul class="main-nav__list site-list">
+      <ul class="nav__list site-list">
         <li class="site-list__item">
-          <a>Главная</a>
-        </li>
-        <li class="site-list__item site-list__item--current">
-          <a href="catalog.html">Фото и видео</a>
+          <a class="site-list__link" href="index.html">Главная</a>
         </li>
         <li class="site-list__item">
-          <a href="form.html">Форма отзыва</a>
+          <a class="site-list__link site-list__item--current">Фото и видео</a>
         </li>
         <li class="site-list__item">
-          <a href="https://htmlacademy.ru">html Academy</a>
+          <a class="site-list__link" href="form.html">Форма отзыва</a>
+        </li>
+        <li class="site-list__item">
+          <a class="site-list__link" href="https://htmlacademy.ru">html Academy</a>
         </li>
       </ul>
-    </nav>
+    </navigation>
   </header>
   <!--Основное содержание-->
   <main class="main-container">
-    <h1 class="visually hidden">Фото и видео</h1>
-    <header class="welcome">
-      <img src="/img/catalog/sedona.svg" width="229" height="39" alt="Седона">
+    <h1 class="visually-hidden">Фото и видео</h1>
+    <header class="welcome--catalog">
+      <img class="welcome__img--catalog" src="/img/catalog/sedona.svg" width="229" height="39" alt="Седона">
     </header>
     <section class="about-catalog">
-      <h2 class="about-catalog__title">Фото и видео</h2>
-      <p class="about-catalog__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть
+      <h2 class="text-block__title">Фото и видео</h2>
+      <p class="text-block__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть
         о
         политике и экономике.</p>
     </section>
     <section class="fotoalbum">
-      <h2 class="visually hidden">Фотоальбом</h2>
-      <ul class="fotoalbum__lsit">
+      <h2 class="visually-hidden">Фотоальбом</h2>
+      <ul class="fotoalbum__list">
         <li class="fotoalbum__item">
-          <img src="/img/catalog/landscape-mobile.jpg" width="280" height="280" alt="Неродные просторы">
-          <h3 class="fotoalbum__title">Неродные просторы</h3>
-          <p class="fotoalbum__author">Автор фото: Борис</p>
+          <img class="fotoalbum__img" src="/img/catalog/landscape-mobile.jpg" width="280" height="280"
+            alt="Неродные просторы">
+          <h3 class="text-block__title--catalog">Неродные просторы</h3>
+          <p class="text-block__description--catalog">Автор фото: Борис</p>
           <button class="fotoalbum__button button" type="button">
-            <span class="visually hidden">Лайк</span>
+            <span class="visually-hidden">Лайк</span>
           </button>
-          <p class="fotoalbum__number">1350</p>
+          <p class="text-block__title--catalog">1350</p>
         </li>
         <li class="fotoalbum__item">
-          <img src="/img/catalog/flora-mobile.jpg" width="280" height="280" alt="Местная растительность">
-          <h3 class="fotoalbum__title">Местная растительность</h3>
-          <p class="fotoalbum__author">Автор фото: Сергей</p>
+          <img class="fotoalbum__img" src="/img/catalog/flora-mobile.jpg" width="280" height="280"
+            alt="Местная растительность">
+          <h3 class="text-block__title--catalog">Местная растительность</h3>
+          <p class="text-block__description--catalog">Автор фото: Сергей</p>
           <button class="fotoalbum__button button" type="button">
-            <span class="visually hidden">Лайк</span>
+            <span class="visually-hidden">Лайк</span>
           </button>
-          <p class="fotoalbum__number">143</p>
+          <p class="text-block__title--catalog">143</p>
         </li>
         <li class="fotoalbum__item">
-          <img src="/img/catalog/road-mobile.jpg" width="280" height="280" alt="Дорога на север">
-          <h3 class="fotoalbum__title">Дорога на север</h3>
-          <p class="fotoalbum__author">Автор фото: Петр</p>
+          <img class="fotoalbum__img" src="/img/catalog/road-mobile.jpg" width="280" height="280" alt="Дорога на север">
+          <h3 class="text-block__title--catalog">Дорога на север</h3>
+          <p class="text-block__description--catalog">Автор фото: Петр</p>
           <button class="fotoalbum__button button" type="button">
-            <span class="visually hidden">Лайк</span>
+            <span class="visually-hidden">Лайк</span>
           </button>
-          <p class="fotoalbum__number">96</p>
+          <p class="text-block__title--catalog">96</p>
         </li>
         <li class="fotoalbum__item">
-          <img src="/img/catalog/bridge-mobile.jpg" width="280" height="280" alt="Мост дьявола">
-          <h3 class="fotoalbum__title">Мост дьявола</h3>
-          <p class="fotoalbum__author">Автор фото: Антон</p>
+          <img class="fotoalbum__img" src="/img/catalog/bridge-mobile.jpg" width="280" height="280" alt="Мост дьявола">
+          <h3 class="text-block__title--catalog">Мост дьявола</h3>
+          <p class="text-block__description--catalog">Автор фото: Антон</p>
           <button class="fotoalbum__button button" type="button">
-            <span class="visually hidden">Лайк</span>
+            <span class="visually-hidden">Лайк</span>
           </button>
-          <p class="fotoalbum__number">254</p>
+          <p class="text-block__title--catalog">254</p>
         </li>
       </ul>
     </section>
     <section class="video">
-      <h2 class="video__title">Все еще сомневаетесь?</h2>
-      <p class="video__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной
+      <h2 class="text-block__title">Все еще сомневаетесь?</h2>
+      <p class="text-block__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в
+        очередной
         раз!</p>
-      <img src="/img/catalog/video-mobile.jpg" width="280" height="177" alt="Видеопрезентация">
+      <img class="video__img" src="/img/catalog/video-mobile.jpg" width="280" height="177" alt="Видеопрезентация">
     </section>
   </main>
   <!--Подвал-->
-  <footer>
-    <div class="footer hashtag">
+  <footer class="footer">
+    <div class="hashtag">
       <p class="hashtag__description">#visitSEDONA</p>
     </div>
     <div class="social">
@@ -117,7 +121,7 @@
       </ul>
     </div>
     <div class="html-academy">
-      <b class="copyright__description">Разработано:</b>
+      <b class="text-block__description">Разработано:</b>
       <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
         <svg aria-hidden="true" focusable="false" width="27" height="35" xmlns="http://www.w3.org/2000/svg">
           <path
