--- a/source/form.html
+++ b/source/form.html
@@ -48,9 +48,10 @@
       <p class="about-form__description">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о
         посещенных вами достопримечательностях</p>
     </section>
-    <section class="forms">
+    <section class="feedback">
       <h2 class="visually-hidden">Формы для заполнения</h2>
-      <form class="feedback" action="https://echo.htmlacademy.ru/" method="post">
+      <form class="feedback__form" action="https://echo.htmlacademy.ru/" method="post">
+        <div class="feedback__first-row">
         <fieldset class="feedback__field">
           <legend class="text-block__title">Представьтесь:</legend>
           <label class="feedback__form-label" for="name">
@@ -81,6 +82,7 @@
             <span class="visually-hidden">Почта</span>
           </button>
         </fieldset>
+        </div>
         <fieldset class="feedback__field">
           <legend class="text-block__title">ВАше Общее впечатление:</legend>
           <ul class="feedback__list">
